After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743353 - core: Fix grl_init() when using the GOptionGroup instead
core: Fix grl_init() when using the GOptionGroup instead
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-22 15:10 UTC by Bastien Nocera
Modified: 2015-02-11 14:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Fix grl_init() when using the GOptionGroup instead (3.43 KB, patch)
2015-01-22 15:10 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-01-22 15:10:15 UTC
.
Comment 1 Bastien Nocera 2015-01-22 15:10:18 UTC
Created attachment 295186 [details] [review]
core: Fix grl_init() when using the GOptionGroup instead

Using the GOptionGroup instead of grl_init() should still make sure
to setup all the necessary plugin paths, etc. Move most of the code
from grl_init() to pre- and post-parse GOptionGroup hooks.
Comment 2 Bastien Nocera 2015-02-11 14:35:57 UTC
Attachment 295186 [details] pushed as 48fa64f - core: Fix grl_init() when using the GOptionGroup instead