core: Fix grl_init() when using the GOptionGroup instead

Using the GOptionGroup instead of grl_init() should still make sure
to setup all the necessary plugin paths, etc. Move most of the code
from grl_init() to pre- and post-parse GOptionGroup hooks.

https://bugzilla.gnome.org/show_bug.cgi?id=743353